--- a/libs/microservice/CMakeLists.txt
+++ b/libs/microservice/CMakeLists.txt
@@ -37,7 +37,7 @@ set(
 )
 
 # Here we define the library.
-add_library(microservice SHARED
+add_library(microservice
         ${HEADER_FILES}
         ${SOURCE_FILES})
 
