- Commented out for faster compiling - Set option -O0 (or no optimization) for debugging visibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include(cmake/ccache.cmake)
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     set(CMAKE_CXX_STANDARD 17)
     # Set C++ version and optimization level
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Ofast -DNDEBUG -Wno-deprecated-declarations")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -DNDEBUG -Wno-deprecated-declarations -O0") #-Ofast
 
     # Let's ensure -std=c++xx instead of -std=g++xx
     set(CMAKE_CXX_EXTENSIONS OFF)
@@ -71,6 +71,8 @@ else ()
     set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:gRPC::grpc_cpp_plugin>)
 endif ()
 
+find_package(spdlog REQUIRED)
+
 add_subdirectory(libs/misc)
 add_subdirectory(libs/microservice)
 add_subdirectory(libs/trtengine)
@@ -80,8 +82,8 @@ add_subdirectory(libs/communicator)
 add_subdirectory(libs/container_agent)
 add_subdirectory(libs/data_source)
 add_subdirectory(libs/yolov5)
-add_subdirectory(libs/retinaface)
-add_subdirectory(libs/arcface)
+# add_subdirectory(libs/retinaface)
+# add_subdirectory(libs/arcface)
 add_subdirectory(libs/device_agent)
 
 add_library(PipePlusPlus
@@ -109,20 +111,20 @@ target_link_libraries(PipePlusPlus PUBLIC
         container_agent
         device_agent
 )
-add_executable(run src/main.cpp)
-target_link_libraries(run PipePlusPlus)
+# add_executable(run src/main.cpp)
+# target_link_libraries(run PipePlusPlus)
 
-add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
-target_link_libraries(DeviceAgent device_agent)
+# add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
+# target_link_libraries(DeviceAgent device_agent)
 
-add_executable(Container_DataSource libs/data_source/data_source.cpp)
-target_link_libraries(Container_DataSource data_source)
+# add_executable(Container_DataSource libs/data_source/data_source.cpp)
+# target_link_libraries(Container_DataSource data_source)
 
 add_executable(Container_Yolov5 libs/yolov5/yolov5.cpp)
 target_link_libraries(Container_Yolov5 yolov5)
 
-add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
-target_link_libraries(Container_RetinaFace retinaface)
+# add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
+# target_link_libraries(Container_RetinaFace retinaface)
 
-add_executable(Container_ArcFace libs/arcface/arcface.cpp)
-target_link_libraries(Container_ArcFace arcface)
+# add_executable(Container_ArcFace libs/arcface/arcface.cpp)
+# target_link_libraries(Container_ArcFace arcface)
