--- a/libs/device_agent/CMakeLists.txt
+++ b/libs/device_agent/CMakeLists.txt
@@ -112,6 +112,7 @@ target_include_directories(device_agent
 
 target_link_libraries(device_agent
         PUBLIC
+        control_grpc_proto
         device_grpc_proto
         ${_GRPC_GRPCPP}
         ${_PROTOBUF_LIBPROTOBUF}
