Feat: Conversion from onnx to trt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,13 +76,14 @@ find_package(spdlog REQUIRED)
 add_subdirectory(libs/misc)
 add_subdirectory(libs/microservice)
 add_subdirectory(libs/trtengine)
-add_subdirectory(libs/baseprocessors)
-add_subdirectory(libs/protobufprotocols)
-add_subdirectory(libs/communicator)
-add_subdirectory(libs/container_agent)
-add_subdirectory(libs/data_source)
+add_subdirectory(libs/onnx2trt)
+# add_subdirectory(libs/baseprocessors)
+# add_subdirectory(libs/protobufprotocols)
+# add_subdirectory(libs/communicator)
+# add_subdirectory(libs/container_agent)
+# add_subdirectory(libs/data_source)
 # add_subdirectory(libs/yolov5)
-add_subdirectory(libs/retinaface)
+# add_subdirectory(libs/retinaface)
 #add_subdirectory(libs/arcface)
 # add_subdirectory(libs/device_agent)
 # add_subdirectory(libs/controller)
@@ -128,8 +129,11 @@ add_subdirectory(libs/retinaface)
 # add_executable(Container_Yolov5 libs/yolov5/yolov5.cpp)
 # target_link_libraries(Container_Yolov5 yolov5)
 
-add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
-target_link_libraries(Container_RetinaFace retinaface)
+add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
+target_link_libraries(convert_onnx2trt onnx2trt)
+
+# add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
+# target_link_libraries(Container_RetinaFace retinaface)
 
 #add_executable(Container_ArcFace libs/arcface/arcface.cpp)
 #target_link_libraries(Container_ArcFace arcface)
