Feat: Load from a single json configuration files - Json configure now should look like yolov5.json in this commit. - Each class loads some fields from the json configuration and also triggers its direct parent from load some others. - Currently only YOLOv5 is ready

--- a/libs/container_agent/CMakeLists.txt
+++ b/libs/container_agent/CMakeLists.txt
@@ -39,6 +39,9 @@ find_package(Threads REQUIRED)
 set(microservice_DIR "${CMAKE_CURRENT_BINARY_DIR}/../microservice")
 find_package(microservice CONFIG REQUIRED)
 
+set(communicator_DIR "${CMAKE_CURRENT_BINARY_DIR}/../communicator")
+find_package(communicator CONFIG REQUIRED)
+
 set(misc_DIR "${CMAKE_CURRENT_BINARY_DIR}/../misc")
 find_package(misc CONFIG REQUIRED)
 
@@ -66,6 +69,7 @@ target_link_libraries(container_agent
         ${_PROTOBUF_LIBPROTOBUF}
         ${CMAKE_THREAD_LIBS_INIT}
         microservice
+        communicator
 )
 
 # add_executable(ContainerAgent container_agent.cpp)
