--- a/libs/age/CMakeLists.txt
+++ b/libs/age/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(baseprocessors)
+project(age)
 
 # This include defines standard install locations.
 # https://cmake.org/cmake/help/v3.11/module/GNUInstallDirs.html
@@ -27,42 +27,45 @@ endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 # Only public header files go here.
 set(
         HEADER_FILES 
-        # basepreprocessor.h
-        baseprocessor.h
-        # basepostprocessor.h
+        age.h
+        ../json/json.h
 )
 
 # All source files and private header files go here.
 set(
         SOURCE_FILES
-        baseutils.cpp
-        basereqbatcher.cpp
-        basebatchinferencer.cpp
-        basebboxcropper.cpp
-        # baseclassifier.cpp
-        # basesoftmaxclassifier.cpp
-        # basebboxcropperverifier.cpp
-        # basekpointextractor.cpp
+        # genderpreprocessor.cpp
+        # genderinference.cpp
+        # genderpostprocessor.cpp
+        age.cpp
 )
 
 # Here we define the library.
-add_library(baseprocessors
+add_library(age
         ${HEADER_FILES}
         ${SOURCE_FILES})
 
 # We also add an alias definition so that we shadown
 # the export namespace when using add_subdirectory() instead.
-add_library(baseprocessors::baseprocessors ALIAS baseprocessors)
+add_library(age::age ALIAS age)
+
 
 # Required compiler features.
 # https://cmake.org/cmake/help/v3.1/manual/cmake-compile-features.7.html
-target_compile_features(baseprocessors
+target_compile_features(age
         # Features required to compile the library itself.
         PRIVATE cxx_std_11)
 # By prefixing the installation paths with our name and version
 # we can have multiple versions installed at the same time.
-set(PROJECT_PREFIX baseprocessors)
+set(PROJECT_PREFIX age)
 
+find_package(TensorRT REQUIRED)
+find_package(CUDA REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(Threads REQUIRED)
+
+set(baseprocessors_DIR "${CMAKE_CURRENT_BINARY_DIR}/../baseprocessors")
+find_package(baseprocessors CONFIG REQUIRED)
 
 set(microservice_DIR "${CMAKE_CURRENT_BINARY_DIR}/../microservice")
 find_package(microservice CONFIG REQUIRED)
@@ -70,31 +73,42 @@ find_package(microservice CONFIG REQUIRED)
 set(misc_DIR "${CMAKE_CURRENT_BINARY_DIR}/../misc")
 find_package(misc CONFIG REQUIRED)
 
-set(trtengine_DIR "${CMAKE_CURRENT_BINARY_DIR}/../trtengine")
-find_package(trtengine CONFIG REQUIRED)
+set(container_agent_DIR "${CMAKE_CURRENT_BINARY_DIR}/../container_agent")
+find_package(container_agent CONFIG REQUIRED)
+
+set(communicator_DIR "${CMAKE_CURRENT_BINARY_DIR}/../communicator")
+find_package(communicator CONFIG REQUIRED)
 
 # Defines the headers for this library.
 # https://cmake.org/cmake/help/v3.11/command/target_include_directories.html
-target_include_directories(baseprocessors
+target_include_directories(age
         PUBLIC
             # Used when building the library:
-            $<BUILD_INTERFACE:${baseprocessors_SOURCE_DIR}/>
+            $<BUILD_INTERFACE:${gender_SOURCE_DIR}/>
             # Used when installing the library:
             $<INSTALL_INTERFACE:${PROJECT_PREFIX}>
             ${OpenCV_INCLUDE_DIRS}
-            ${CUDA_INCLUDE_DIRS} 
+            ${CUDA_INCLUDE_DIRS}
+            ${TensorRT_INCLUDE_DIRS}
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../protobufprotocols>
         PRIVATE
             # Used only when building the library:
             src)
 
-target_link_libraries(baseprocessors
+target_link_libraries(age
         PUBLIC
+        data_grpc_proto
+        device_grpc_proto
         ${OpenCV_LIBS}
         ${CUDA_LIBRARIES}
         ${CMAKE_THREAD_LIBS_INIT}
-        misc
+        ${TensorRT_LIBRARIES}
         microservice
+        misc
         trtengine
+        baseprocessors
+        communicator
+        container_agent
 )
 
 # Here we configure variables specifying the target directories.
@@ -102,21 +116,21 @@ set(INSTALL_RUNTIME_DIR ${CMAKE_INSTALL_BINDIR})
 set(INSTALL_CONFIG_DIR  ${CMAKE_INSTALL_LIBDIR}/${PROJECT_PREFIX}/cmake)
 set(INSTALL_LIBRARY_DIR ${CMAKE_INSTALL_LIBDIR}/${PROJECT_PREFIX}/${CMAKE_BUILD_TYPE})
 set(INSTALL_ARCHIVE_DIR ${CMAKE_INSTALL_LIBDIR}/${PROJECT_PREFIX}/${CMAKE_BUILD_TYPE}/static)
-set(INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_PREFIX}/baseprocessors)
+set(INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_PREFIX}/age)
 
 # Define the configuration file locations.
-set(PROJECT_CONFIG_VERSION_FILE "${PROJECT_BINARY_DIR}/baseprocessors-config-version.cmake")
-set(PROJECT_CONFIG_FILE         "${PROJECT_BINARY_DIR}/baseprocessors-config.cmake")
+set(PROJECT_CONFIG_VERSION_FILE "${PROJECT_BINARY_DIR}/age-config-version.cmake")
+set(PROJECT_CONFIG_FILE         "${PROJECT_BINARY_DIR}/age-config.cmake")
 
-configure_package_config_file(cmake/baseprocessors-config.cmake.in
+configure_package_config_file(cmake/age-config.cmake.in
         ${PROJECT_CONFIG_FILE}
         INSTALL_DESTINATION ${INSTALL_CONFIG_DIR})
 
 
 # The INSTALL(TARGET) command specifies where to install specific targets.
 # By specifying EXPORT here, we add these targets to an export group.
-install(TARGETS baseprocessors
-        EXPORT baseprocessors-targets
+install(TARGETS age
+        EXPORT age-targets
         RUNTIME DESTINATION ${INSTALL_RUNTIME_DIR}
         LIBRARY DESTINATION ${INSTALL_LIBRARY_DIR}
         ARCHIVE DESTINATION ${INSTALL_ARCHIVE_DIR})
@@ -132,15 +146,15 @@ install(FILES
         DESTINATION ${INSTALL_CONFIG_DIR})
 
 # The INSTALL(EXPORT) command installs a previously defined export group to a script.
-install(EXPORT baseprocessors-targets
-        FILE baseprocessors-targets.cmake
-        NAMESPACE baseprocessors::
+install(EXPORT age-targets
+        FILE age-targets.cmake
+        NAMESPACE age::
         DESTINATION ${INSTALL_CONFIG_DIR})
 
-export(EXPORT baseprocessors-targets
-       FILE ${CMAKE_CURRENT_BINARY_DIR}/baseprocessors-targets.cmake
-       NAMESPACE baseprocessors::)
+export(EXPORT age-targets
+       FILE ${CMAKE_CURRENT_BINARY_DIR}/age-targets.cmake
+       NAMESPACE age::)
 
 # Register the package in the user's package registry.
 # https://cmake.org/cmake/help/v3.11/command/export.html
-export(PACKAGE baseprocessors)
+export(PACKAGE age)
