Yolov5 model for plate detections rewritten json config loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ add_subdirectory(libs/communicator)
 add_subdirectory(libs/container_agent)
 add_subdirectory(libs/data_source)
 add_subdirectory(libs/yolov5)
-# add_subdirectory(libs/yolov5-plate)
+add_subdirectory(libs/yolov5-plate)
 # add_subdirectory(libs/retinaface)
 # add_subdirectory(libs/arcface)
 # add_subdirectory(libs/movenet)
@@ -161,8 +161,8 @@ target_link_libraries(Container_DataSource data_source)
 add_executable(Container_Yolov5 libs/yolov5/yolov5.cpp)
 target_link_libraries(Container_Yolov5 yolov5)
 
-# add_executable(Container_Yolov5-plate libs/yolov5-plate/yolov5-plate.cpp)
-# target_link_libraries(Container_Yolov5-plate yolov5-plate)
+add_executable(Container_Yolov5-plate libs/yolov5-plate/yolov5-plate.cpp)
+target_link_libraries(Container_Yolov5-plate yolov5-plate)
 
 # add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
 # target_link_libraries(convert_onnx2trt onnx2trt)
