RetinaFace model for plate detections rewritten json config loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,7 @@ add_subdirectory(libs/container_agent)
 add_subdirectory(libs/data_source)
 add_subdirectory(libs/yolov5)
 add_subdirectory(libs/yolov5-plate)
-# add_subdirectory(libs/retinaface)
+add_subdirectory(libs/retinaface)
 # add_subdirectory(libs/arcface)
 # add_subdirectory(libs/movenet)
 # add_subdirectory(libs/emotionnet)
@@ -167,8 +167,8 @@ target_link_libraries(Container_Yolov5-plate yolov5-plate)
 # add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
 # target_link_libraries(convert_onnx2trt onnx2trt)
 
-# add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
-# target_link_libraries(Container_RetinaFace retinaface)
+add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
+target_link_libraries(Container_RetinaFace retinaface)
 
 # add_executable(Container_ArcFace libs/arcface/arcface.cpp)
 # target_link_libraries(Container_ArcFace arcface)
