--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,10 @@ face-recognition/
 cmake-test/
 cmake-build-debug/
 cmake-build-default/
-models/
-model_profile/
-logs/
+models
+model_profiles
+logs
+videos
 
 data
 curve
