--- a/libs/arcface/CMakeLists.txt
+++ b/libs/arcface/CMakeLists.txt
@@ -70,6 +70,9 @@ find_package(container_agent CONFIG REQUIRED)
 set(communicator_DIR "${CMAKE_CURRENT_BINARY_DIR}/../communicator")
 find_package(communicator CONFIG REQUIRED)
 
+set(data_source_DIR "${CMAKE_CURRENT_BINARY_DIR}/../data_source")
+find_package(data_source CONFIG REQUIRED)
+
 # Defines the headers for this library.
 # https://cmake.org/cmake/help/v3.11/command/target_include_directories.html
 target_include_directories(arcface
@@ -100,6 +103,7 @@ target_link_libraries(arcface
         baseprocessors
         communicator
         container_agent
+        data_source
 )
 
 # Here we configure variables specifying the target directories.
