EmotionNet model for plate detections rewritten json config loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ add_subdirectory(libs/yolov5-plate)
 add_subdirectory(libs/retinaface)
 add_subdirectory(libs/arcface)
 add_subdirectory(libs/movenet)
-# add_subdirectory(libs/emotionnet)
+add_subdirectory(libs/emotionnet)
 add_subdirectory(libs/gender)
 add_subdirectory(libs/age)
 add_subdirectory(libs/controller)
@@ -178,8 +178,8 @@ target_link_libraries(Container_ArcFace arcface)
 add_executable(Container_MoveNet libs/movenet/movenet.cpp)
 target_link_libraries(Container_MoveNet movenet)
 
-# add_executable(Container_EmotionNet libs/emotionnet/emotionnet.cpp)
-# target_link_libraries(Container_EmotionNet emotionnet)
+add_executable(Container_EmotionNet libs/emotionnet/emotionnet.cpp)
+target_link_libraries(Container_EmotionNet emotionnet)
 
 add_executable(Container_Gender libs/gender/gender.cpp)
 target_link_libraries(Container_Gender gender)
